--- a/index.html
+++ b/index.html
@@ -14,28 +14,69 @@
 <body>
     
     <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
-        <div class="uk-navbar-left">
-            <a class="uk-navbar-item uk-logo" href="/" aria-label="Back to Home">
-                <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width"/>
-            </a>
+        <div class="uk-navbar-center">
+            <a class="uk-navbar-item" href="#">Inicio</a>
+            <a class="uk-navbar-item" href="#">Sobre</a>
+            <a class="uk-navbar-item" href="#">Patrocínio</a>
         </div>
 
-        <div class="uk-navbar-right">
+        <div class="uk-navbar-right uk-padding-small">
             <a href="https://github.com/pythonNordeste" uk-icon="icon: github; ratio: 1.3"></a>
             <a href="https://www.linkedin.com/company/pythonnordeste" uk-icon="icon: linkedin; ratio: 1.3"></a>
             <a href="https://www.instagram.com/pythonnordeste" uk-icon="icon: instagram; ratio: 1.3"></a>
         </div>
     </nav>
-
-    <div uk-grid class="hero">
-        <div class="uk-width-2-5@s">
+    <div class="container">
+        <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width"/>
+            <p>
+                A Python Nordeste 2024 busca, no resgate do processo artesanal 
+                dos cartazes de rua, celebrar o toque humano. A ideia é encorajar 
+                uma reflexão entre avanço e preservação das nossas heranças culturais,
+                tecendo um diálogo entre passado e presente, não como uma resposta à
+                inteligência artificial, mas como um lembrete de que no núcleo da 
+                inovação sempre haverá um coração humano, pulsante e criativo.
+            </p>
         </div>
-        <div class="uk-width-3-5@s">
-            <img src="assets/images/MURAL-PYTHON-NORDESTE-2024.svg" width="100%"/>
+
+    
+        <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr" />
+
+        <img src="assets/images/MURAL-PYTHON-NORDESTE-2024.svg" />
+
+        <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr" />
+
+        <div class="evento-row" uk-grid>
+            <img src="assets/images/MOSAICO.svg" class="uk-width-2-5@s"/>
+            <div class="uk-width-3-5@s">
+                <h1>SOBRE O EVENTO</h1>
+                <p>
+                    A Python Nordeste 2024 busca, no resgate do processo artesanal 
+                    dos cartazes de rua, celebrar o toque humano. A ideia é encorajar 
+                    uma reflexão entre avanço e preservação das nossas heranças culturais,
+                    tecendo um diálogo entre passado e presente, não como uma resposta à
+                    inteligência artificial, mas como um lembrete de que no núcleo da 
+                    inovação sempre haverá um coração humano, pulsante e criativo.
+                </p>
+            </div>
+        </div>
+
+        <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr" />
+
+
+        <div class="patrocinio">
+            <h3>PATROCÍNIO</h3>
+
+            <p>
+                Baixe aqui o nosso Plano de Patrocínio com as 
+                modalidades, benefícios e todas informações que 
+                você precisa
+            </p>
+
+            <button>Download em PDF</button>
+            <button>English Version</button>
         </div>
     </div>
-
 
     <footer class="uk-footer uk-padding-small uk-background-muted">
         <div class="uk-container">
