--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="assets/css/custom.css" />
     <script src="assets/js/uikit.min.js"></script>
     <script src="assets/js/uikit-icons.min.js"></script>
+    <style>
+        @font-face {
+            font-family: bonoc;
+            src: url(assets/fonts/Bonoc.ttf);
+        }
+
+        @font-face {
+            font-family: manropeRegular;
+            src: url(assets/fonts/Manrope/Manrope-Regular.ttf);
+        }
+    </style>
 </head>
 
 <body>
@@ -30,7 +41,8 @@
         <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width"/>
             <p>
-                A Python Nordeste 2024 busca, no resgate do processo artesanal 
+                A Python Nordeste é o evento que reúne as comunidades Python do Nordeste.
+                A edição 2024 busca, no resgate do processo artesanal 
                 dos cartazes de rua, celebrar o toque humano. A ideia é encorajar 
                 uma reflexão entre avanço e preservação das nossas heranças culturais,
                 tecendo um diálogo entre passado e presente, não como uma resposta à
