Adiciona estilo aos botões

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>PyNE 2024 | Python Nordeste 2024</title>
     <meta charset="utf-8">
@@ -72,12 +71,19 @@
             <div class="uk-width-3-5@s">
                 <h1>SOBRE O EVENTO</h1>
                 <p>
-                    A Python Nordeste 2024 busca, no resgate do processo artesanal 
-                    dos cartazes de rua, celebrar o toque humano. A ideia é encorajar 
-                    uma reflexão entre avanço e preservação das nossas heranças culturais,
-                    tecendo um diálogo entre passado e presente, não como uma resposta à
-                    inteligência artificial, mas como um lembrete de que no núcleo da 
-                    inovação sempre haverá um coração humano, pulsante e criativo.
+                    A Python Nordeste é o <span class="uk-text-bold">maior encontro da comunidade Python</span> na região. 
+                    É um evento itinerante que ocorre anualmente nas cidades do Nordeste a mais de 10 anos. Em 2024 chegaremos 
+                    a 12ª edição do evento!
+                </p>
+                <p>
+                    Com foco na promoção da diversidade e troca de experiências e conhecimento, 
+                    o evento é voltado para indivíduos de diversas áreas e origens, <span class="uk-text-bold">sem distinção</span>
+                    de conhecimento técnico ou atuação na área.
+                </p> 
+                <p>
+                    O encontro visa difundir a linguagem entre universidades, empresas, instituições 
+                    da sociedade civil e indivíduos em busca de novos conhecimentos, promovendo assim 
+                    a difusão da cultura do Software Livre e o estímulo ao desenvolvimento na Região Nordeste. 
                 </p>
             </div>
         </div>
@@ -93,9 +99,9 @@
                 modalidades, benefícios e todas informações que 
                 você precisa
             </p>
-
-            <button>Download em PDF</button>
-            <button>English Version</button>
+            
+            <button class="uk-button uk-button-primary uk-text-bolder uk-margin-small-right">Media Kit (pt-br)</button>
+            <button class="uk-button uk-button-default uk-text-bolder">Media Kit (en)</button>
         </div>
     </div>
 
@@ -130,7 +136,6 @@
                 <p>© 2024 Python Nordeste</p>
             </div>
         </div>
-    </footer>    
+    </footer>
 </body>
-
 </html>
