--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 </head>
 
 <body>
-    
     <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
         <div class="uk-navbar-center">
-            <a class="uk-navbar-item" href="#">Inicio</a>
-            <a class="uk-navbar-item" href="#">Sobre</a>
-            <a class="uk-navbar-item" href="#">Patrocínio</a>
+            <ul class="uk-navbar-nav uk-visible@s">
+                <li><a class="uk-navbar-item" href="#">Inicio</a></li>
+                <li><a class="uk-navbar-item" href="#">Sobre</a></li>
+                <li><a class="uk-navbar-item" href="#">Patrocínio</a></li>
+            </ul>
+            <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
         </div>
 
         <div class="uk-navbar-right uk-padding-small">
@@ -45,6 +47,16 @@
             <a href="https://www.instagram.com/pythonnordeste" uk-icon="icon: instagram; ratio: 1.3"></a>
         </div>
     </nav>
+
+    <div id="sidenav" uk-offcanvas="flip: true" class="uk-offcanvas">
+        <div class="uk-offcanvas-bar">
+            <ul class="uk-nav">
+                <li><a class="uk-navbar-item" href="#">Inicio</a></li>
+                <li><a class="uk-navbar-item" href="#">Sobre</a></li>
+                <li><a class="uk-navbar-item" href="#">Patrocínio</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="container">
         <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width"/>
