Adiciona plano de patrocínio

--- a/index.html
+++ b/index.html
@@ -112,8 +112,16 @@
                 você precisa
             </p>
             
-            <button class="uk-button uk-button-primary uk-text-bolder uk-margin-small-right">Media Kit (pt-br)</button>
-            <button class="uk-button uk-button-default uk-text-bolder">Media Kit (en)</button>
+            <a href="https://drive.google.com/file/d/1i9-E1J3g2W_eF5bzeomsl-IKxKl7x58r/view?usp=sharing"
+               class="uk-button uk-button-primary uk-text-bolder uk-margin-small-right"
+               target="_blank">
+                Media Kit (pt-br)
+            </a>
+            <a href="https://drive.google.com/file/d/1WvfelX-Sfp79YcUbf8Hs6e-MtPabVSmO/view?usp=sharing"
+               class="uk-button uk-button-default uk-text-bolder"
+               target="_blank">
+                Media Kit (en)
+            </a>
         </div>
     </div>
 
