add telegram icon using svg

--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
                     <div class="uk-grid-row-small">
                         <a href="https://github.com/pythonNordeste" class="uk-margin-small-right" uk-icon="icon: github; ratio: 1.3"></a>
                         <a href="https://www.linkedin.com/company/pythonnordeste" class="uk-margin-small-right" uk-icon="icon: linkedin; ratio: 1.3"></a>
-                        <a href="https://www.instagram.com/pythonnordeste" uk-icon="icon: instagram; ratio: 1.3"></a>
+                        <a href="https://www.instagram.com/pythonnordeste" class="uk-margin-small-right" uk-icon="icon: instagram; ratio: 1.3"></a>
+                        <a href="https://t.me/pythonnordeste">
+                            <img src="assets/images/ASSET-TELEGRAM-ICON.svg"/>
+                        </a>
                     </div>
                 </div>
             </div>
