adding meta tags to improve SEO

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>PyNE 2024 | Python Nordeste 2024</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!-- Primary Meta Tags -->
+    <title>PyNE 2024 | Python Nordeste 2024</title>
+    <meta name="description" content="PyNE24 | Python Nordeste 2024 | Natal - RN, Brasil | Em Agosto">
+    
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="PyNE24 | Python Nordeste 2024 | Natal - RN, Brasil | Em Agosto">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://2024.pythonnordeste.org/">
+    <meta property="og:description" content="PyNE24 | Python Nordeste 2024 | Natal - RN, Brasil | Em Agosto">
+    <meta property="og:image" content="https://2024.pythonnordeste.org/assets/images/pyne24_logo.png">
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://2024.pythonnordeste.org/">
+    <meta property="twitter:title" content="PyNE24 | Python Nordeste 2024 | Natal - RN, Brasil | Em Agosto">
+    <meta property="twitter:description" content="PyNE24 | Python Nordeste 2024 | Natal - RN, Brasil | Em Agosto">
+    <meta property="twitter:image" content="https://2024.pythonnordeste.org/assets/images/pyne24_logo.png">
+
+    <script>console.log("\nPython Nordeste 2024\n\nPessoas > Tecnologia\n✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿\n ")</script>
+
     <link rel="stylesheet" href="assets/css/uikit.min.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
     <style>
