feat: adicionando margens aos blocos (#16)

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width"/>
-            <p>
+            <p class="uk-margin">
                 A Python Nordeste é o evento que reúne as comunidades Python do Nordeste.
                 A edição 2024 busca, no resgate do processo artesanal 
                 dos cartazes de rua, celebrar o toque humano. A ideia é encorajar 
@@ -94,11 +94,11 @@
     
         <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr" />
 
-        <img src="assets/images/MURAL-PYTHON-NORDESTE-2024.svg" />
+        <img src="assets/images/MURAL-PYTHON-NORDESTE-2024.svg" class="uk-margin" />
 
         <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr" />
 
-        <div class="evento-row" uk-grid>
+        <div class="evento-row uk-margin" uk-grid>
             <img src="assets/images/MOSAICO.svg" class="uk-width-2-5@s"/>
             <div class="uk-width-3-5@s">
                 <h1 id="sobre">SOBRE O EVENTO</h1>
