fix(align): alinhando texto com o centro da imagem lateral (#16)

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <div class="container">
         <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width"/>
+            <h2 class="uk-width-1-1 uk-text-center uk-margin">
+                09, 10 e 11 de agosto de 2024
+            </h2>
             <p class="uk-margin">
                 A Python Nordeste é o evento que reúne as comunidades Python do Nordeste.
                 A edição 2024 busca, no resgate do processo artesanal 
@@ -100,23 +103,25 @@
 
         <div class="evento-row uk-margin" uk-grid>
             <img src="assets/images/MOSAICO.svg" class="uk-width-2-5@s"/>
-            <div class="uk-width-3-5@s">
-                <h1 id="sobre">SOBRE O EVENTO</h1>
-                <p>
-                    A Python Nordeste é o <span class="uk-text-bold">maior encontro da comunidade Python</span> na região. 
-                    É um evento itinerante que ocorre anualmente nas cidades do Nordeste a mais de 10 anos. Em 2024 chegaremos 
-                    a 12ª edição do evento!
-                </p>
-                <p>
-                    Com foco na promoção da diversidade e troca de experiências e conhecimento, 
-                    o evento é voltado para indivíduos de diversas áreas e origens, <span class="uk-text-bold">sem distinção</span>
-                    de conhecimento técnico ou atuação na área.
-                </p> 
-                <p>
-                    O encontro visa difundir a linguagem entre universidades, empresas, instituições 
-                    da sociedade civil e indivíduos em busca de novos conhecimentos, promovendo assim 
-                    a difusão da cultura do Software Livre e o estímulo ao desenvolvimento na Região Nordeste. 
-                </p>
+            <div class="uk-width-3-5@s uk-flex uk-flex-middle">
+                <div>
+                    <h1 id="sobre">SOBRE O EVENTO</h1>
+                    <p>
+                        A Python Nordeste é o <span class="uk-text-bold">maior encontro da comunidade Python</span> na região. 
+                        É um evento itinerante que ocorre anualmente nas cidades do Nordeste a mais de 10 anos. Em 2024 chegaremos 
+                        a 12ª edição do evento!
+                    </p>
+                    <p>
+                        Com foco na promoção da diversidade e troca de experiências e conhecimento, 
+                        o evento é voltado para indivíduos de diversas áreas e origens, <span class="uk-text-bold">sem distinção</span>
+                        de conhecimento técnico ou atuação na área.
+                    </p> 
+                    <p>
+                        O encontro visa difundir a linguagem entre universidades, empresas, instituições 
+                        da sociedade civil e indivíduos em busca de novos conhecimentos, promovendo assim 
+                        a difusão da cultura do Software Livre e o estímulo ao desenvolvimento na Região Nordeste. 
+                    </p>
+                </div>
             </div>
         </div>
 
