--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <ul class="uk-navbar-nav uk-visible@s">
                 <li><a class="uk-navbar-item" href="/">Inicio</a></li>
                 <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
+                <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
@@ -62,6 +63,7 @@
             <ul class="uk-nav">
                 <li><a class="uk-navbar-item" href="/">Inicio</a></li>
                 <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
+                <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
             </ul>
         </div>
@@ -70,7 +72,7 @@
         <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width uk-margin uk-margin-top"/>
             <h2 class="uk-width-1-1 uk-text-center uk-margin">
-                09, 10 e 11 de agosto de 2024
+                09, 10 e 11 de agosto
             </h2>
             <p class="uk-margin">
                 A Python Nordeste é o evento que reúne as comunidades Python do Nordeste.
@@ -113,6 +115,32 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr uk-margin" />
+        
+        <div class="scroll-smooth uk-margin-bottom" id="local">
+
+            <div>
+                <h3 class="uk-text-center">LOCAL</h3>
+            </div>
+            
+            <div class="uk-margin-auto" style="max-width: 600px">
+                <p class="uk-text-center">
+                    Nosso evento acontecerá na
+                    <a href="https://maps.google.com/maps?ll=-5.830751,-35.216122&z=15&t=m&hl=pt-BR&gl=BR&mapclient=embed&cid=1602971506784567923" target="_blank">
+                        Escola de Governo Cardeal Dom Eugênio de Araújo Sales
+                    </a>
+                    em
+                    <span class="uk-text-bold">
+                        Natal, RN
+                    </span>
+                </p>
+            </div>
+
+            <div class="uk-margin-auto">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12813.7309607872!2d-35.21194455738092!3d-5.827461537429716!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2557d62e3f36f%3A0x163ee617aef78273!2sEscola%20de%20Governo%20Cardeal%20Dom%20Eug%C3%AAnio%20de%20Ara%C3%BAjo%20Sales!5e0!3m2!1spt-BR!2sbr!4v1705543562022!5m2!1spt-BR!2sbr" height="450" style="border:0;" class="uk-width-1-1" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
