Feature #18: add button to submission fo activities

--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
                 inovação sempre haverá um coração humano, pulsante e criativo.
             </p>
         </div>
-
+        <div class="width-max-content uk-margin-auto">
+            <a href="https://www.even3.com.br/python-nordeste-2024/"
+            class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
+            target="_blank">
+                Submissões
+            </a>
+        </div>
         <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr uk-margin" />
         
         <img src="assets/images/MURAL-PYTHON-NORDESTE-2024.svg" />
