--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
         </div>
         <div class="width-max-content uk-margin-auto">
             <a href="https://www.even3.com.br/python-nordeste-2024/"
-            class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
-            target="_blank">
-                Submissões
+                class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
+                target="_blank"
+                data-uk-tooltip="title: Chamada de atividades; pos: bottom">
+                Chamada de atividades 🎙️
             </a>
         </div>
         <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr uk-margin" />
