feat(patrocinio): adicionando link pra seção de patrocinadoras (#19)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
+                <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
         </div>
@@ -65,6 +66,7 @@
                 <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
+                <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
             </ul>
         </div>
     </div>
@@ -176,7 +178,7 @@
 
         <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr uk-margin" />
         
-        <div class="scroll-smooth uk-margin-bottom" id="patrocinio">
+        <div class="scroll-smooth uk-margin-bottom" id="patrocinadoras">
 
             <div>
                 <h2 class="uk-text-center">CONFIRA AS NOSSAS PATROCINADORAS E APOIADORAS!</h3>
