fix(vinta): aplicando tamanho correto da logo (#20)

--- a/index.html
+++ b/index.html
@@ -186,10 +186,11 @@
             
             <div>
                 <h4 class="uk-text-center">BRONZE</h3>
-                
 
                 <div class="uk-flex uk-flex-center">
-                    <img class="logo-patrocinador" src="assets/images/patrocinio/vinta-logo-blue.png"/>
+                    <a href="https://www.vinta.com.br/" target="_blank">
+                        <img class="patrocinador-bronze" src="assets/images/patrocinio/vinta-logo-blue.png"/>
+                    </a>
                 </div>
             </div>
         </div>
