fix: change tooltip title

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="https://www.even3.com.br/python-nordeste-2024/"
                 class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
                 target="_blank"
-                data-uk-tooltip="title: Chamada de atividades; pos: bottom">
+                data-uk-tooltip="title: Submeta palestras ou tutoriais e contribua para a programação da Python Nordeste">
                 Chamada de atividades 🎙️
             </a>
         </div>
