feat - aumentando tamanho dos apoiadores

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
             <div class="uk-flex uk-flex-center">
 
                 <a href="https://sebrae.com.br/sites/PortalSebrae/" target="_blank" class="uk-padding-small">
-                    <img class="patrocinador-cobre" src="assets/images/apoio/sebrae.svg"/>
+                    <img class="patrocinador-bronze" src="assets/images/apoio/sebrae.svg"/>
                 </a>
                 <a href="https://sebrae.com.br/sites/PortalSebrae/sebraelab" target="_blank" class="uk-padding-small">
-                    <img class="patrocinador-cobre" src="assets/images/apoio/sebraelab.png"/>
+                    <img class="patrocinador-bronze" src="assets/images/apoio/sebraelab.png"/>
                 </a>
 
             </div>
