feat - mudando o título do botão

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <a href="https://www.even3.com.br/python-nordeste-2024/"
                 class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
                 target="_blank"
-                data-uk-tooltip="title: Submeta palestras ou tutoriais e contribua para a programação da Python Nordeste">
-                Chamada de atividades 🎙️
+                data-uk-tooltip="title: Adquira já o seu ingresso da Python Nordeste 2024">
+                Adquira já o seu ingresso!
             </a>
         </div>
         <img src="assets/images/DIV-COBRAS-PYTHON-NORDESTE-2024.svg" class="hr uk-margin" />
