--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </ul>
         </div>
     </div>
-    <div class="container">
+    <div class="uk-container">
         <div uk-grid class="hero">
             <img src="assets/images/LOGO-PYTHON-NORDESTE-2024.svg" class="uk-responsive-width uk-margin uk-margin-top"/>
             <h2 class="uk-width-1-1 uk-text-center uk-margin">
@@ -88,7 +88,7 @@
         </div>
         <div class="width-max-content uk-margin-auto">
             <a href="https://www.even3.com.br/python-nordeste-2024/"
-                class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
+                class="uk-button uk-button-primary uk-text-bolder uk-margin-small-right"
                 target="_blank"
                 data-uk-tooltip="title: Adquira já o seu ingresso da Python Nordeste 2024">
                 Adquira já o seu ingresso!
@@ -102,26 +102,26 @@
     </div>
 
     <div class="scroll-smooth" id="sobre">
-        <div class="evento-row container" uk-grid>
-            <img src="assets/images/MOSAICO.svg" class="uk-width-2-5@s"/>
-            <div class="uk-width-3-5@s uk-flex uk-flex-left">
+        <div class="evento-row uk-container uk-flex">
+            <img src="assets/images/SOBRE.svg" class="uk-width-2-5@l"/>
+            <div class="uk-width-3-5@l">
                 <div>
-                    <h1>SOBRE O EVENTO</h1>
-                    <p>
-                        A Python Nordeste é o <span class="uk-text-bold">maior encontro da comunidade Python</span> na região. 
-                        É um evento itinerante que ocorre anualmente nas cidades do Nordeste a mais de 10 anos. Em 2024 chegaremos 
-                        a 12ª edição do evento!
-                    </p>
-                    <p>
-                        Com foco na promoção da diversidade e troca de experiências e conhecimento, 
-                        o evento é voltado para indivíduos de diversas áreas e origens, <span class="uk-text-bold">sem distinção</span>
-                        de conhecimento técnico ou atuação na área.
-                    </p> 
-                    <p>
-                        O encontro visa difundir a linguagem entre universidades, empresas, instituições 
-                        da sociedade civil e indivíduos em busca de novos conhecimentos, promovendo assim 
-                        a difusão da cultura do Software Livre e o estímulo ao desenvolvimento na Região Nordeste. 
-                    </p>
+                <h1>SOBRE O EVENTO</h1>
+                <p>
+                    A Python Nordeste é o <span class="uk-text-bold">maior encontro da comunidade Python</span> na região. 
+                    É um evento itinerante que ocorre anualmente nas cidades do Nordeste a mais de 10 anos. Em 2024 chegaremos 
+                    a 12ª edição do evento!
+                </p>
+                <p>
+                    Com foco na promoção da diversidade e troca de experiências e conhecimento, 
+                    o evento é voltado para indivíduos de diversas áreas e origens, <span class="uk-text-bold">sem distinção</span>
+                    de conhecimento técnico ou atuação na área.
+                </p> 
+                <p>
+                    O encontro visa difundir a linguagem entre universidades, empresas, instituições 
+                    da sociedade civil e indivíduos em busca de novos conhecimentos, promovendo assim 
+                    a difusão da cultura do Software Livre e o estímulo ao desenvolvimento na Região Nordeste. 
+                </p>
                 </div>
             </div>
         </div>
@@ -221,7 +221,7 @@
         </div>
     </div>
 
-    <footer class="uk-footer uk-padding-small uk-background-muted">
+    <footer class="uk-footer uk-background-muted">
         <div class="uk-container">
             <div class="uk-grid-divider uk-child-width-expand@s" uk-grid>
                 <div>
