adicionando link para financimaneto coletivo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
+                <li>
+                    <a  class="uk-navbar-item" href="https://bh.mini.debconf.org/doacoes/"
+                    class="uk-button uk-button-danger uk-text-bolder uk-margin-small-right"
+                    target="_blank"
+                    data-uk-tooltip="title: Doações - MiniDebConf Belo Horizonte 2024">
+                    Financiamento coletivo!
+                    </a>
+                </li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
         </div>
