add logo alura-fiap

--- a/index.html
+++ b/index.html
@@ -151,7 +151,14 @@
                 </a>
             </div>
         </div>
-        
+        <div>
+            <h4 class="uk-text-center">PRATA</h3>
+            <div class="uk-flex uk-flex-center">
+                <a href="https://www.alura.com.br/" target="_blank">
+                    <img class="patrocinador-prata" src="assets/images/patrocinio/LOGO_ALURA_FIAP.png"/>
+                </a>
+            </div>
+        </div>
         <div>
             <h4 class="uk-text-center">BRONZE</h3>
 
