Add imd+ufrn logo

--- a/index.html
+++ b/index.html
@@ -182,13 +182,17 @@
         <div>
             <h4 class="uk-text-center">APOIO</h4>
 
-            <div class="uk-flex uk-flex-center">
+            <div class="uk-flex uk-flex-center uk-flex-wrap uk-flex-column@s">
                 <a href="https://sebrae.com.br/sites/PortalSebrae/" target="_blank" class="uk-padding-small">
                     <img class="patrocinador-cobre" src="assets/images/apoio/sebrae.svg"/>
                 </a>
 
                 <a href="https://sebrae.com.br/sites/PortalSebrae/sebraelab" target="_blank" class="uk-padding-small">
                     <img class="patrocinador-cobre" src="assets/images/apoio/sebraelab.png"/>
+                </a>
+
+                <a href="https://www.metropoledigital.ufrn.br/portal/" target="_blank" class="uk-padding-small">
+                    <img style="max-width: 180px" src="assets/images/apoio/imd+parque.png"/>
                 </a>
             </div>
         </div>
