fix: padding & marging

--- a/speakers.html
+++ b/speakers.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <!-- Inicio -->
-    <div class="uk-container" style="padding: 10px 0 10px 0;">
+    <div class="uk-container uk-margin-top uk-margin-bottom">
         <div class="uk-grid-small uk-child-width-expand@s uk-text-center" uk-grid>
             <div>
                 <div id="card1" class="uk-card uk-padding-small uk-card-purple card">
@@ -99,14 +99,16 @@
                 <div class="uk-card-green">
                     <span class="uk-margin-small-left" uk-icon="location"></span>
                 </div>
-                <div class="uk-card uk-card-default uk-text-center uk-padding-small">
-                    <span class="uk-badge uk-badge-large uk-badge-beige">09:00</span>
-                    <h3> Inicio do credenciamento </h3>
+                <div class="uk-card uk-card-default uk-text-center">
+                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">09:00</span>
+                    <h3 class="custom-class"> Inicio do credenciamento </h3>
                 </div>
+            </div>
             </div>
         </div>
     </div>
-    <div class="uk-container" style="padding: 10px 0 10px 0;">
+
+    <div class="uk-container uk-margin-bottom">
         <!-- PRIMEIRO DIA -->
         <div id="day1">
             <div class="uk-grid-small uk-grid-stack" uk-grid style="display: flex; flex-wrap: wrap;">
@@ -469,8 +471,8 @@
                 </div>
             </div>
         </div>
-        </div>
     </div>
+    
     <!-- Fim -->
 
     <footer class="uk-footer uk-background-muted">
