--- a/speakers.html
+++ b/speakers.html
@@ -97,7 +97,7 @@
         <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
             <div>
                 <div class="uk-card-green">
-                    <span class="uk-margin-small-left" uk-icon="location"></span>
+                    <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                 </div>
                 <div class="uk-card uk-card-default uk-text-center">
                     <span class="custom-class uk-badge uk-badge-large uk-badge-beige">09:00</span>
@@ -114,7 +114,7 @@
             <div class="uk-grid-small uk-grid-stack" uk-grid style="display: flex; flex-wrap: wrap;">
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-primary">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-primary">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-primary">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-primary">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -196,7 +196,7 @@
             <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-green">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-green">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-green">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-green">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-green">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -294,7 +294,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-green">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -319,7 +319,7 @@
             <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -338,7 +338,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -357,7 +357,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -376,7 +376,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -395,7 +395,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -414,7 +414,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
@@ -452,7 +452,7 @@
                 </div>
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-fuchsia">
-                        <span class="uk-margin-small-left" uk-icon="location"></span>
+                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon"></span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
