--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a class="uk-navbar-item" href="/">Inicio</a></li>
                 <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
-                <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
+                <!-- <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
@@ -65,7 +65,7 @@
                 <li><a class="uk-navbar-item" href="/">Inicio</a></li>
                 <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
-                <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
+                <!-- <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
             </ul>
         </div>
@@ -172,9 +172,13 @@
         <div>
             <h4 class="uk-text-center">COBRE</h4>
 
-            <div class="uk-flex uk-flex-center">
-                <a href="https://evolux.net.br/" target="_blank">
+            <div class="uk-flex uk-flex-center uk-flex-wrap uk-flex-column@s">
+                <a href="https://evolux.net.br/" target="_blank" class="uk-padding-small">
                     <img class="patrocinador-cobre" src="assets/images/patrocinio/evolux-logo.png"/>
+                </a>
+
+                <a href="https://sobre.jusbrasil.com.br/" target="_blank" class="uk-padding-small">
+                    <img class="patrocinador-cobre" src="assets/images/patrocinio/jusbrasil.svg"/>
                 </a>
             </div>
         </div>
